feat: added prettier, authentication

--- a/app/jsconfig.json
+++ b/app/jsconfig.json
@@ -3,7 +3,12 @@
         "baseUrl": ".",
         "paths": {
             "@/*": ["src/*"]
-        }
+        },
+        "module": "commonjs",
+        "target": "es2016",
+        "jsx": "preserve",
+        "checkJs": true,
     },
-    "include": ["src"]
+    "include": ["src"],
+    "exclude": ["node_modules", "**/node_modules/*"]
 }
