--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
     "scripts": {
         "frontend": "cd app && npx vite",
-        "init:frontend": "cd app && npm install"
+        "init:frontend": "cd app && npm install",
+        "init:backend": "cd backend && npm install",
+        "backend": "cd backend && npm run dev"
     }
 }
