--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "dependencies": {
         "express": "^4.18.2",
         "mysql2": "^3.7.0"
+    },
+    "devDependencies": {
+        "vite": "^5.0.11"
     }
 }
