--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
         "frontend": "cd app && npx vite",
         "init:frontend": "cd app && npm install",
         "init:backend": "cd backend && npm install",
-        "backend": "cd backend && npm run dev"
+        "backend": "cd backend && npm run dev",
+        "build": "cd app && npm run build"
     }
 }
