Added backend code for checkout page

--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
         "init:backend": "cd backend && npm install",
         "backend": "cd backend && npm run dev",
         "build": "cd app && npm run build"
+    },
+    "dependencies": {
+        "vite": "^5.0.11"
     }
 }
