--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
         "build": "cd app && npm run build"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.3",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.15.4",
+        "@mui/x-data-grid": "^6.18.7",
+        "@mui/x-date-pickers": "^6.19.0",
+        "dayjs": "^1.11.10",
         "vite": "^5.0.11"
     }
 }
