--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,8 @@
         "@mui/material": "^5.15.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.21.1"
+        "react-router-dom": "^6.21.1",
+        "@fontsource/roboto": "^5.0.8"
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^4.2.1",
