--- a/app/package.json
+++ b/app/package.json
@@ -12,16 +12,17 @@
     "dependencies": {
         "@emotion/react": "^11.11.3",
         "@emotion/styled": "^11.11.0",
+        "@fontsource/roboto": "^5.0.8",
+        "@material-ui/core": "^4.12.4",
         "@mui/icons-material": "^5.15.3",
         "@mui/material": "^5.15.4",
         "@mui/x-data-grid": "^6.18.7",
         "@mui/x-date-pickers": "^6.19.0",
         "dayjs": "^1.11.10",
-        "vite": "^5.0.11",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.21.1",
-        "@fontsource/roboto": "^5.0.8"
+        "vite": "^5.0.11"
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^4.2.1",
